Create first react app

--- a/js x react/d1/aboutus.html
+++ b/js x react/d1/aboutus.html
@@ -12,7 +12,7 @@
         <a href="./aboutus.html"> About Us </a> 
 
 
-        <h1><span><img src="./pictures/pic12.jpg" alt="" class="logo"></span>PWC Website</h1>
+        <h1><span><img src="./pictures/pic12.jpg" alt="" className="logo"></span>PWC Website</h1>
         <h1>PWC Website</h1>
         <h2>About Us</h2> 
         <p>
