--- a/js x react/d1/studentdata.html
+++ b/js x react/d1/studentdata.html
@@ -11,7 +11,7 @@
         <a href="./studentdata.html"> Student Data </a> |
         <a href="./aboutus.html"> About Us </a> 
         
-        <h1><span><img src="./pictures/pic12.jpg" alt="" class="logo"></span>PWC Website</h1>
+        <h1><span><img src="./pictures/pic12.jpg" alt="" className="logo"></span>PWC Website</h1>
         <h2>Student Data</h2>
         <div>
             <table>
