--- a/js x react/d3/domManipulation/index.html
+++ b/js x react/d3/domManipulation/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Interactive website</h1>
     </header>
-    <section class="container">
+    <section className="container">
       <form id= "my-form">
         <h1>Add User</h1>
         <div>
@@ -22,14 +22,14 @@
           <label for="email">Email:</label>
           <input type="text" id="email">
         </div>
-        <input class="btn" type="submit" value="Submit">
-        <div class="msg"></div>
+        <input className="btn" type="submit" value="Submit">
+        <div className="msg"></div>
       </form>
       <div id="users"></div>
-      <!-- <ul class=“items”>
-        <li class=“item”>Item 1</li>
-        <li class=“item”>Item 2</li>
-        <li class=“item”>Item 3</li>
+      <!-- <ul className=“items”>
+        <li className=“item”>Item 1</li>
+        <li className=“item”>Item 2</li>
+        <li className=“item”>Item 3</li>
       </ul> -->
     </section>
     <script src="main.js"></script>
