--- a/js x react/d1/applicationform.html
+++ b/js x react/d1/applicationform.html
@@ -11,7 +11,7 @@
         <a href="./studentdata.html"> Student Data </a> |
         <a href="./aboutus.html"> About Us </a> 
 
-        <h1><span><img src="./pictures/pic12.jpg" alt="" class="logo"></span>PWC Website</h1>
+        <h1><span><img src="./pictures/pic12.jpg" alt="" className="logo"></span>PWC Website</h1>
         <h2>Application Form</h2>   
 
         <div style="border: 2px solid; padding: 10px; text-align: center; width: 50%; margin: 0 auto;">
