--- a/js x react/d1/contactus.html
+++ b/js x react/d1/contactus.html
@@ -11,7 +11,7 @@
         <a href="./studentdata.html"> Student Data </a> |
         <a href="./aboutus.html"> About Us </a> 
 
-        <h1><span><img src="./pictures/pic12.jpg" alt="" class="logo"></span>PWC Website</h1>
+        <h1><span><img src="./pictures/pic12.jpg" alt="" className="logo"></span>PWC Website</h1>
         <h2>Contact Us</h2>
         <div>
             <p>Email: enquiry@ng.pwc.com</p>
