--- a/js x react/d1/index.html
+++ b/js x react/d1/index.html
@@ -12,7 +12,7 @@
         <a href="./aboutus.html"> About Us </a> 
 
         
-        <h1><span><img src="./pictures/pic12.jpg" alt="" class="logo"></span>PWC Website</h1>
+        <h1><span><img src="./pictures/pic12.jpg" alt="" className="logo"></span>PWC Website</h1>
         <h2>PWC Auditing Form</h2>
         <p>This is my first website created during my time at PWC learning software development</p>        
         <img src="./pwc.jpg" alt="pwc pic(or at least, lol)" width="200px" height="200px">
